# smart-agent

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  INNOVATION_REPORT.md  LICENSE  README.md  RESEARCH_REPORT.md  SELF_REFLECTIVE_ROUTING.md  SKILL.md  benchmark_learning_curve.py  benchmark_results.json  benchmark_routing.json  benchmark_tqbc.py  config.example.yaml  install.sh  push_to_github.sh  pyproject.toml  setup.py  start_server.sh
.github/workflows/: test.yml
scripts/: adaptive_compression.py  adaptive_reasoning.py  api_server.py  audit.py  benchmark.py  benchmark_real.py  benchmark_routing.py  cache.py  cli.py  confidence.py  config.py  conformal_routing.py  distillation.py  io_utils.py  learning_viz.py  local_agent.py  meta_learner.py  model_registry.py  models.py  outcome_cache.py  pre-commit  privacy.py  quality_eval.py  reasoning.py  routing.py  setup-hooks.sh  task_router.py  tqbc.py  validation.py  weights.py
src/task_router/: __init__.py  ablation_study.py  adaptive_compression.py  adaptive_reasoning.py  api_server.py  audit.py  benchmark.py  benchmark_latency.py  benchmark_real.py  benchmark_routing.py  cache.py  cli.py  confidence.py  config.py  conformal_routing.py  correction_applier.py  cost.py  distillation.py  episode_collector.py  generate_paper_tables.py  io_utils.py  learning_viz.py  logger.py  meta_learner.py  model_registry.py  models.py  multiseed_routing.py  outcome_cache.py  preprocessing.py  privacy.py  prompts.py  quality_eval.py  quality_judge.py  reasoning.py  reflection.py  routing.py  rules.py  task_planner.py  task_router.py  tqbc.py  (+1 more)
tests/: conftest.py  test_adaptive_compression.py  test_adaptive_reasoning.py  test_api_keys.py  test_confidence.py  test_config.py  test_conformal_routing.py  test_correction_applier.py  test_decision_fusion.py  test_distillation_loop.py  test_episode_collector.py  test_io_utils.py  test_meta_learner.py  test_outcome_cache.py  test_privacy.py  test_quality_eval.py  test_quality_judge.py  test_reasoning.py  test_reflection.py  test_routing_accuracy.py  test_task_router.py  test_tqbc.py  test_tqbc_integration.py
